modify vectordatatogistable filter use now ogr driver simple test ok

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -825,6 +825,9 @@ postgres
 ADD_TEST(coTuLabelMapToGISTableFilterNew ${COMMON_TESTS10}
 otbLabelMapToGISTableFilterNew
 )
+ADD_TEST(coTuGISTableToVectorDataFilterNew ${COMMON_TESTS10}
+otbGISTableToVectorDataFilterNew
+)
 
 ENDIF(OTB_USE_PQXX)
 
@@ -987,6 +990,7 @@ otbPostGISTableNew.cxx
 otbVectorDataToGISTableFilterNew.cxx
 otbVectorDataToGISTableFilter.cxx
 otbLabelMapToGISTableFilterNew.cxx
+otbGISTableToVectorDataFilterNew.cxx
 )
 ENDIF(OTB_USE_PQXX)
 
