ENH: Add developpers cmake options (OTB_COMPILE_WITH_FULL_WARNING) activate full warning

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -22,3 +22,10 @@ ENDIF(OTB_USE_VISU_GUI)
 IF(OTB_USE_PQXX)
         SUBDIRS(GeospatialAnalysis)
 ENDIF(OTB_USE_PQXX)
+
+IF(OTB_COMPILE_WITH_FULL_WARNING)
+  IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OTB_FULL_WARNING_LIST_PARAMETERS}")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OTB_FULL_WARNING_LIST_PARAMETERS}")
+  ENDIF(CMAKE_COMPILER_IS_GNUCXX)
+ENDIF(OTB_COMPILE_WITH_FULL_WARNING)
