ENH : add Tu for metadata handler files

--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -1894,10 +1894,19 @@ ADD_TEST(ioTvPointSetFileReader2 ${IO_TESTS17}
 
 ENDIF(OTB_USE_LIBLAS)
 
+ADD_TEST(ioTuSpotImageMetadataInterfaceNew ${IO_TESTS17}
+        otbSpotImageMetadataInterfaceNew
+)
+
+ADD_TEST(ioTuIkonosImageMetadataInterfaceNew ${IO_TESTS17}
+        otbIkonosImageMetadataInterfaceNew
+)
+
+ADD_TEST(ioTuQuickBirdImageMetadataInterfaceNew ${IO_TESTS17}
+        otbQuickBirdImageMetadataInterfaceNew
+)
 
 ADD_TEST(ioTuImageMetadataInterfaceNew ${IO_TESTS17}
-#         --compare-ascii ${EPSILON_9}  ${BASELINE_FILES}/ioPointSetFileReader.txt
-#                         ${TEMP}/ioPointSetFileReader.txt
         otbImageMetadataInterfaceNew
 )
 
@@ -2089,6 +2098,9 @@ SET(BasicIO_SRCS17
 otbPointSetFileReaderNew.cxx
 otbPointSetFileReader.cxx
 otbPointSetFileReader2.cxx
+otbSpotImageMetadataInterfaceNew.cxx
+otbQuickBirdImageMetadataInterfaceNew.cxx
+otbIkonosImageMetadataInterfaceNew.cxx
 otbImageMetadataInterfaceNew.cxx
 otbImageMetadataInterfaceTest.cxx
 otbImageMetadataInterfaceTest2.cxx
