--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -807,6 +807,7 @@ ENDIF(OTB_USE_PQXX)
 
 # -------       Fichiers sources CXX -----------------------------------
 SET(BasicCommon_SRCS1
+otbCommonTests1.cxx
 otbSystemTest.cxx
 otbTestCommandLineArgumentParser.cxx
 #otbTestCommandLineArgumentParserGUI.cxx
@@ -815,6 +816,7 @@ otbTestCommandLineArgumentParserList.cxx
 otbTestCommandLineArgumentParserWithError.cxx
 )
 SET(BasicCommon_SRCS2
+otbCommonTests2.cxx
 otbLineSpatialObjectList.cxx
 otbExtractROINew.cxx
 otbExtractROI.cxx
@@ -827,6 +829,7 @@ otbVectorDataExtractROINew.cxx
 otbVectorDataExtractROI.cxx
 )
 SET(BasicCommon_SRCS3
+otbCommonTests3.cxx
 otbMultiToMonoChannelExtractROI.cxx
 otbMultiToMonoChannelExtractROINew.cxx
 otbPointSetSourceTest.cxx
@@ -840,6 +843,7 @@ otbPathListToHistogramGenerator.cxx
 otbLineSpatialObjectListToPointSetFilterNew.cxx
 )
 SET(BasicCommon_SRCS4
+otbCommonTests4.cxx
 otbHistogramStatisticsFunction.cxx
 otbObjectListNew.cxx
 otbObjectList.cxx
@@ -853,6 +857,7 @@ otbObjectListToObjectListFilterNew.cxx
 otbVectorDataToVectorDataFilterNew.cxx
 )
 SET(BasicCommon_SRCS5
+otbCommonTests5.cxx
 otbImageListToImageListFilterNew.cxx
 otbConcatenateVectorImageFilterNew.cxx
 otbConcatenateVectorImageFilter.cxx
@@ -865,6 +870,7 @@ otbArcSpatialObjectNew.cxx
 otbPathListToPathListFilterNew.cxx
 )
 SET(BasicCommon_SRCS6
+otbCommonTests6.cxx
 otbPolyLineImageConstIterator.cxx
 otbPolyLineImageIterator.cxx
 otbDrawPathFilterNew.cxx
@@ -882,6 +888,7 @@ otbRectangle.cxx
 )
 
 SET(BasicCommon_SRCS7
+otbCommonTests7.cxx
 otbGenericInterpolateImageFunctionNew.cxx
 otbMirrorBoundaryConditionTest.cxx
 otbStandardFilterWatcherNew.cxx
@@ -898,6 +905,7 @@ otbRemoteSensingRegion.cxx
 )
 
 SET(BasicCommon_SRCS8
+otbCommonTests8.cxx
 otbQuickLookImageGeneratorNew.cxx
 otbQuickLookImageGenerator.cxx
 otbImageRegionTileMapSplitterNew.cxx
@@ -911,6 +919,7 @@ otbVectorImageToASImageAdaptorNew.cxx
 
 IF(OTB_USE_MAPNIK)
 SET(BasicCommon_SRCS9
+otbCommonTests9.cxx
 otbVectorDataToImageFilterNew.cxx
 otbVectorDataToImageFilter.cxx
 otbVectorDataToImageFilterSensorModel.cxx
@@ -920,6 +929,7 @@ ENDIF(OTB_USE_MAPNIK)
 
 IF(OTB_USE_PQXX)
 SET(BasicCommon_SRCS10
+otbCommonTests10.cxx
 otbPostGISConnectionImplementationNew.cxx
 otbPostGISConnectionImplementationConnectToDB.cxx
 otbPostGISConnectionImplementationPerformTransaction.cxx
@@ -929,41 +939,20 @@ ENDIF(OTB_USE_PQXX)
 
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 
-# ${TIFF_LIBRARY}
-
-ADD_EXECUTABLE(otbCommonTests1 otbCommonTests1.cxx ${BasicCommon_SRCS1})
-TARGET_LINK_LIBRARIES(otbCommonTests1 OTBIO OTBTesting)
-
-ADD_EXECUTABLE(otbCommonTests2 otbCommonTests2.cxx ${BasicCommon_SRCS2})
-TARGET_LINK_LIBRARIES(otbCommonTests2 OTBIO OTBTesting)
-
-ADD_EXECUTABLE(otbCommonTests3 otbCommonTests3.cxx ${BasicCommon_SRCS3})
-TARGET_LINK_LIBRARIES(otbCommonTests3 OTBIO OTBTesting)
-
-ADD_EXECUTABLE(otbCommonTests4 otbCommonTests4.cxx ${BasicCommon_SRCS4})
-TARGET_LINK_LIBRARIES(otbCommonTests4 OTBIO OTBTesting)
-
-ADD_EXECUTABLE(otbCommonTests5 otbCommonTests5.cxx ${BasicCommon_SRCS5})
-TARGET_LINK_LIBRARIES(otbCommonTests5 OTBIO OTBTesting)
-
-ADD_EXECUTABLE(otbCommonTests6 otbCommonTests6.cxx ${BasicCommon_SRCS6})
-TARGET_LINK_LIBRARIES(otbCommonTests6 OTBIO OTBTesting)
-
-ADD_EXECUTABLE(otbCommonTests7 otbCommonTests7.cxx ${BasicCommon_SRCS7})
-TARGET_LINK_LIBRARIES(otbCommonTests7 OTBIO OTBTesting)
-
-ADD_EXECUTABLE(otbCommonTests8 otbCommonTests8.cxx ${BasicCommon_SRCS8})
-TARGET_LINK_LIBRARIES(otbCommonTests8 OTBIO OTBTesting)
-
+OTB_ADD_EXECUTABLE(otbCommonTests1 "${BasicCommon_SRCS1}" "OTBIO;OTBTesting")
+OTB_ADD_EXECUTABLE(otbCommonTests2 "${BasicCommon_SRCS2}" "OTBIO;OTBTesting")
+OTB_ADD_EXECUTABLE(otbCommonTests3 "${BasicCommon_SRCS3}" "OTBIO;OTBTesting")
+OTB_ADD_EXECUTABLE(otbCommonTests4 "${BasicCommon_SRCS4}" "OTBIO;OTBTesting")
+OTB_ADD_EXECUTABLE(otbCommonTests5 "${BasicCommon_SRCS5}" "OTBIO;OTBTesting")
+OTB_ADD_EXECUTABLE(otbCommonTests6 "${BasicCommon_SRCS6}" "OTBIO;OTBTesting")
+OTB_ADD_EXECUTABLE(otbCommonTests7 "${BasicCommon_SRCS7}" "OTBIO;OTBTesting")
+OTB_ADD_EXECUTABLE(otbCommonTests8 "${BasicCommon_SRCS8}" "OTBIO;OTBTesting")
 IF(OTB_USE_MAPNIK)
-ADD_EXECUTABLE(otbCommonTests9 otbCommonTests9.cxx ${BasicCommon_SRCS9})
-TARGET_LINK_LIBRARIES(otbCommonTests9 OTBIO  OTBTesting ${MAPNIK_LIBRARY})
+  OTB_ADD_EXECUTABLE(otbCommonTests9 "${BasicCommon_SRCS9}" "OTBIO;OTBTesting;${MAPNIK_LIBRARY}")
 ENDIF(OTB_USE_MAPNIK)
-
 IF(OTB_USE_PQXX)
-ADD_EXECUTABLE(otbCommonTests10 otbCommonTests10.cxx ${BasicCommon_SRCS10})
-#TODO this line should be refined when we will like to have this capability with windows
-TARGET_LINK_LIBRARIES(otbCommonTests10 OTBIO  OTBTesting pq pqxx)
+  #TODO this line should be refined when we will like to have this capability with windows
+  OTB_ADD_EXECUTABLE(otbCommonTests10 "${BasicCommon_SRCS10}" "OTBIO;OTBTesting;pq;pqxx")
 ENDIF(OTB_USE_PQXX)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
